--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,11 @@
 asgiref==3.6.0
+backports.zoneinfo==0.2.1
+dj-database-url==1.2.0
 Django==4.1.6
 django-filter==22.1
+django-on-heroku==1.1.2
 djangorestframework==3.14.0
+gunicorn==20.1.0
 importlib-metadata==6.0.0
 Markdown==3.4.1
 Pillow==9.4.0
@@ -10,4 +14,5 @@ pytz==2022.7.1
 PyYAML==6.0
 sqlparse==0.4.3
 uritemplate==4.1.1
+whitenoise==6.4.0
 zipp==3.14.0
